--- a/src/css/imports/variables/fonts.css
+++ b/src/css/imports/variables/fonts.css
@@ -1,17 +1,65 @@
+/* Fonts */
+:root {
+    --sans-serif: 'Barlow', sans-serif;
+    --monospaced: 'Victor Mono', monospace;
+}
+
 /* Font sizes */
 
 :root {
     --l-heading-desktop: 6rem;
     --m-heading-desktop: 3rem;
     --s-heading-desktop: 2rem;
+    --l-heading-tablet: 3rem;
+    --m-heading-tablet: 2rem;
+    --s-heading-tablet: 1.25rem;
+    --l-heading-mobile: 2rem;
+    --m-heading-mobile: 1.25rem;
+    --s-heading-mobile: 1rem;
     --xl-body-desktop: 2rem;
     --l-body-desktop: 1.25rem;
     --m-body-desktop: 1rem;
     --s-body-desktop: 0.75rem;
+    --l-body-mobile: 1rem;
+    --m-body-mobile: 0.75rem;
+    --s-body-mobile: 0.625rem;
 }
 
 /* Transformations */
 
 :root {
     --letter-spacing: 0.2rem;
+    --bold-font: 600;
+}
+
+.l-font {
+    font-size: var(--l-body-mobile);
+}
+
+.m-font {
+    font-size: var(--m-body-mobile);
+}
+
+.s-font {
+    font-size: var(--s-body-mobile);
+}
+
+.l-heading {
+    font-size: var(--l-heading-mobile);
+}
+
+.m-heading {
+    font-size: var(--m-heading-mobile);
+}
+
+.s-heading {
+    font-size: var(--s-heading-mobile);
+}
+
+.bold {
+    font-weight: var(--bold-font);
+}
+
+.italic {
+    font-style: italic;
 }
