--- a/src/css/imports/variables/variables.css
+++ b/src/css/imports/variables/variables.css
@@ -1,3 +1,12 @@
 :root {
-    --border-desktop: solid 0.2rem var(--green);
+    --border-desktop: solid 0.2rem;
+    --no-border-desktop: solid 0.2rem var(--dark-green);
+}
+
+.no-margin-b {
+    margin-bottom: 0;
+}
+
+.no-margin-t {
+    margin-top: 0;
 }
