--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,7 +1,317 @@
+@import url("./imports/variables/colors.css");
+@import url("./imports/variables/fonts.css");
+@import url("./imports/variables/variables.css");
+@import url("./imports/links.css");
+
+.index {
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: minmax(100px, auto);
+  gap: 1.8rem;
+  grid-template-areas:
+    "banner"
+    "info"
+    "events"
+    "carousel"
+    "img-buttons";
+  max-width: 100vw;
+}
+
+.main-banner {
+  grid-area: banner;
+  background-image: linear-gradient(
+      to top,
+      rgb(0, 0, 0, 0.3),
+      rgb(255, 255, 255, 0)
+    ),
+    url(../../images/stefan-pflaum-zpXK__TvyAw-unsplash.jpg);
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: flex-start;
+  animation: 30s ease-in 10s infinite banner;
+  gap: 0.1rem;
+}
+
+@keyframes banner {
+  0% {
+    background-image: linear-gradient(
+        to top,
+        rgb(0, 0, 0, 0.3),
+        rgb(255, 255, 255, 0)
+      ),
+      url(../../images/stefan-pflaum-zpXK__TvyAw-unsplash.jpg);
+  }
+  33.3% {
+    background-image: linear-gradient(
+        to top,
+        rgb(0, 0, 0, 0.3),
+        rgb(255, 255, 255, 0)
+      ),
+      url(../../images/maxim-hopman-IayKLkmz6g0-unsplash.jpg);
+  }
+  66.6% {
+    background-image: linear-gradient(
+        to top,
+        rgb(0, 0, 0, 0.3),
+        rgb(255, 255, 255, 0)
+      ),
+      url(../../images/fons-heijnsbroek-PGrZsmu97OU-unsplash.jpg);
+  }
+}
+
 .info {
-    display: flex;
-    justify-content: space-between;
-    border: var(--border-desktop);
-    padding: 1rem;
-    background-color: var(--yellow);
+  grid-area: info;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: var(--green) var(--border-desktop);
+  padding: 1.8rem;
+  margin: 1.8rem;
+  background-color: var(--beige);
+  min-height: 37rem;
+  max-width: 100%;
+  gap: 1.8rem;
+}
+
+.info > * {
+  width: 100%;
+}
+
+iframe {
+  max-width: 100%;
+  height: 450px;
+}
+
+.info--hours {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 1rem;
+}
+
+.info--location {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+/* Carousel */
+
+.carousel {
+  grid-area: carousel;
+  flex-wrap: nowrap;
+  overflow: auto;
+  display: flex;
+  color: var(--white);
+  min-width: 100%;
+  max-height: 100%;
+  gap: 1.8rem;
+}
+
+.carousel h3 {
+  margin-top: 8rem;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.carousel-img a {
+  display: none;
+  transition: all 3s;
+}
+
+.carousel-img {
+  max-width: 100%;
+  height: 18.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.cosmology {
+  background-image: linear-gradient(
+      to bottom,
+      rgb(0, 0, 0, 0.7),
+      rgb(0, 0, 0, 0)
+    ),
+    url(../../images/celso-405219.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 20rem;
+  height: 100%;
+  transition: all .3s;
+}
+
+.evolution {
+  background-image: linear-gradient(
+      to bottom,
+      rgb(0, 0, 0, 0.7),
+      rgb(0, 0, 0, 0)
+    ),
+    url(../../images/skeleton-414543_1920.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 20rem;
+  height: 100%;
+  transition: all .3s;
+}
+
+.biology {
+  background-image: linear-gradient(
+      to bottom,
+      rgb(0, 0, 0, 0.7),
+      rgb(0, 0, 0, 0)
+    ),
+    url(../../images/jesse-orrico-60373.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 20rem;
+  height: 100%;
+  transition: all .3s;
+}
+
+.robotics {
+  background-image: linear-gradient(
+      to bottom,
+      rgb(0, 0, 0, 0.7),
+      rgb(0, 0, 0, 0)
+    ),
+    url(../../images/stem-t4l-rSdkzkfvqlY-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 20rem;
+  height: 100%;
+  transition: all .3s;
+}
+
+.ecology {
+  background-image: linear-gradient(
+      to bottom,
+      rgb(0, 0, 0, 0.7),
+      rgb(0, 0, 0, 0)
+    ),
+    url(../../images/theodor-vasile-f3B2YNuhMxA-unsplash.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 20rem;
+  height: 100%;
+  transition: all .3s;
+}
+
+.carousel > * {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.cosmology:hover,
+.evolution:hover,
+.biology:hover,
+.robotics:hover,
+.ecology:hover {
+  background-color: var(--black);
+  background-blend-mode: multiply;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.carousel-img:hover a {
+  display: inline-block;
+  justify-self: center;
+  align-self: center;
+}
+
+/* img-buttons */
+
+.img-buttons {
+  grid-area: img-buttons;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  max-width: 100%;
+  max-height: 100%;
+  gap: 1.8rem;
+  margin: 1.8rem;
+}
+
+.img-buttons a {
+  color: var(--white);
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.img-buttons h3 {
+  z-index: 2;
+  position: absolute;
+  bottom: 10%;
+  text-align: center;
+}
+
+.img-buttons--item1--img,
+.img-buttons--item2--img,
+.img-buttons--item3--img {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  max-width: 100%;
+  max-height: 100%;
+  min-width: 25rem;
+  height: 35rem;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  position: relative;
+  transition: all 0.3s ease-out;
+}
+
+.img-buttons--item1--img {
+  background-position: left;
+}
+
+.img-buttons--item2--img,
+.img-buttons--item3--img {
+  background-position: center;
+}
+
+.img-buttons--item1,
+.img-buttons--item2,
+.img-buttons--item3 {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.img-buttons--item1--img {
+  background-image: linear-gradient(to top, rgb(0, 0, 0, 0.7), rgb(0, 0, 0, 0)),
+    url(../../images/scientific-2040795_1280.jpg);
+}
+
+.img-buttons--item1--img:hover,
+.img-buttons--item2--img:hover,
+.img-buttons--item3--img:hover {
+  background-color: rgb(0, 0, 0, 0.5);
+  background-blend-mode: multiply;
+}
+
+.img-buttons--item2--img {
+  background-image: linear-gradient(
+      to top,
+      rgb(0, 0, 0, 0.7),
+      rgb(255, 255, 255, 0)
+    ),
+    url(../../images/exhibition-1863344_1920.jpg);
+}
+
+.img-buttons--item3--img {
+  background-image: linear-gradient(
+      to top,
+      rgb(0, 0, 0, 0.7),
+      rgb(255, 255, 255, 0)
+    ),
+    url(../../images/billetto-editorial-334686.jpg);
 }
