--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,51 +4,325 @@
 @import url("./imports/links.css");
 
 body {
-    font-family: "Barlow", sans-serif;
-    background-color: var(--grey);
+  font-family: var(--sans-serif);
+  background-color: var(--grey);
+  max-width: 100vw;
+  min-height: 100vh;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-a {
-    text-decoration: none;
+main {
+  max-width: 100vw;
 }
 
-ul,
-ul li {
-    list-style: none;
-    text-indent: 0;
+ul {
+  list-style: none;
+  padding-left: 0;
+  margin: 0;
 }
+
+/* Header */
 
 header {
-    background-color: var(--white);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-weight: 570;
+  background-color: var(--white);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 570;
+  max-width: 100%;
+  min-width: 1vw;
+  padding: 1rem 0;
+  letter-spacing: 0.15rem;
+  z-index: 3;
+  position: sticky;
+  top: 0;
+}
+
+.logo {
+  width: 5rem;
+  margin-left: 1.8rem;
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  max-width: 100%;
+  margin-right: 1.8rem;
 }
 
 nav {
-    display: flex;
-    gap: 5rem;
-    text-transform: uppercase;
+  display: none;
+  text-transform: uppercase;
+  font-weight: var(--bold-font);
+  position: absolute;
+  width: 100vw;
+  height: 15rem;
+  right: -1.8rem;
+  top: 6.1rem;
+  background-color: var(--black);
+  gap: 1.8rem;
 }
 
-.events {
-    background-color: var(--green);
-    color: var(--white);
-    padding: 1rem;
+nav a {
+  color: var(--white);
+  margin-left: 1.8rem;
 }
 
-.events > * {
-    display: flex;
+.active {
+  color: var(--green);
 }
 
-.events img {
-    max-width: 100%;
+.menu {
+  display: flex;
+  max-width: 100%;
+  height: 5rem;
+  position: relative;
+  align-items: center;
+}
+
+#menu-checkbox {
+  display: none;
+}
+
+#menu-label {
+  background: center no-repeat url(../../images/burger.svg);
+  z-index: 3;
+  cursor: pointer;
+}
+
+#menu-checkbox:checked ~ label {
+  background: center no-repeat url(../../images/burger-close.svg);
+}
+
+#menu-label,
+#menu-checkbox:checked ~ label {
+  background-size: contain;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+#menu-checkbox:checked ~ nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+/* Footer */
+footer {
+  background-color: var(--white);
+  margin-top: 1rem;
+  min-height: 15rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+footer a {
+  font-weight: var(--bold-font);
+}
+
+.footer {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  order: 2;
+  gap: 1rem;
+}
+
+.footer-logo {
+  width: 3.1rem;
+}
+
+.footer-menu1,
+.footer-menu2 {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: space-around;
+}
+
+.footer-1,
+.footer-2 {
+  display: flex;
+  justify-content: center;
+}
+
+.footer-1 {
+  flex: 1;
+  order: 1;
+}
+
+.footer-2 {
+  flex: 1;
+  order: 3;
+}
+
+.socials {
+  display: flex;
+  gap: 1rem;
+}
+
+.socials img {
+  width: 15px;
 }
 
 /* Fonts */
 
 h1 {
-    font-size: var(--l-heading-desktop);
-    letter-spacing: var(--letter-spacing);
+  font-size: var(--l-heading-mobile);
+  letter-spacing: var(--letter-spacing);
+  text-transform: uppercase;
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+}
+
+h3 {
+  margin: 0;
+}
+
+/* Banner */
+
+.banner {
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 42rem;
+  color: var(--white);
+  display: flex;
+  align-items: flex-end;
+  gap: 0.1rem;
+}
+
+.banner > * {
+  margin: 2rem;
+}
+
+/* Events */
+.events {
+  grid-area: events;
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1.8rem;
+  max-width: 100%;
+}
+
+.events h2 {
+  margin-left: 1.8rem;
+}
+
+.events--container {
+  max-width: 100%;
+  background-color: var(--green);
+  color: var(--white);
+  padding: 1.8rem;
+  display: flex;
+  flex-direction: column;
+  max-height: 100%;
+  gap: 1.8rem;
+}
+
+.events--container > * {
+  max-width: 100%;
+  width: 100%;
+}
+
+.events--container h3::before {
+  content: "Visiting Professor of Aeronautics";
+  animation: 30s ease-in 10s infinite events-h;
+}
+
+@keyframes events-h {
+  0% {
+    content: "Visiting Professor of Aeronautics";
+  }
+
+  33.3% {
+    content: "Night in the Museum";
+  }
+
+  66.6% {
+    content: "Energetica Exhibition on Loan";
+  }
+}
+
+.events--container p::before {
+  content: "It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.";
+  animation: 30s ease-in 10s infinite events-p;
+}
+
+@keyframes events-p {
+  0% {
+    content: "It is our pleasure to announce that Prof Sheila Widnall from the Massachusetts Institute of Technology will be delivering 3 lectures on the development of aeronautics and where the future lies in this exciting ‘space’.";
+  }
+
+  33.3% {
+    content: "Get your family together for an exciting night in the museum as you sleep over beside dinosaurs and science displays. Bring your own sleeping bag and get ready to rough it as we go exploring the wonders of science.";
+  }
+
+  66.6% {
+    content: "On loan from the NEMO Science Museum in Amsterdam, the Energetica exhibition is coming to the Community Science Museum. It’s a series of installations that allow visitors to experience the power of the elements as we harness them. From solar energy powering lighting, to ‘Wind Island’ that shows how turbines are able to use and control wind to create power.";
+  }
+}
+
+.events-img {
+  background-image: url(../../images/andrew-ruiz-348421.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 30rem;
+  animation: 30s ease-in 10s infinite events-img;
+}
+
+@keyframes events-img {
+  0% {
+    background-image: url(../../images/andrew-ruiz-348421.jpg);
+    width: 100%;
+    height: 30rem;
+  }
+
+  21% {
+    background-image: url(../../images/andrew-ruiz-348421.jpg);
+    width: 100%;
+    height: 30rem;
+  }
+
+  22% {
+    background-image: url(../../images/roberto-nickson-396152.jpg);
+    width: 100%;
+    height: 30rem;
+  }
+
+  55% {
+    background-image: url(../../images/roberto-nickson-396152.jpg);
+    width: 100%;
+    height: 30rem;
+  }
+
+  56% {
+    background-image: url(../../images/ainur-khakimov-EDSmRCH8GtM-unsplash.jpg);
+    width: 100%;
+    height: 30rem;
+  }
+
+  88% {
+    background-image: url(../../images/ainur-khakimov-EDSmRCH8GtM-unsplash.jpg);
+    width: 100%;
+    height: 30rem;
+  }
+
+  89% {
+    background-image: url(../../images/andrew-ruiz-348421.jpg);
+    width: 100%;
+    height: 30rem;
+  }
 }
